--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     volumes:
      - ./upload:/usr/src/app/upload
     environment:
-     - SESSION_SECRET_KEY: a427d62b1f748b7af2a965c88a99005
+     - SESSION_SECRET_KEY=a427d62b1f748b7af2a965c88a99005
